--- a/02-A-brief-introduction-to-research-design.qmd
+++ b/02-A-brief-introduction-to-research-design.qmd
@@ -377,6 +377,8 @@ But are they ordinal scale or interval scale? One argument says that we can't re
 
 ## 測量的信度 {#sec-Assessing-the-reliability-of-a-measurement}
 
+> [導讀簡報](slides2B.html){target="_blank"}
+
 
 <!--- At this point we've thought a little bit about how to operationalise a theoretical construct and thereby create a psychological measure. And we've seen that by applying psychological measures we end up with variables， which can come in many different types. At this point， we should start discussing the obvious question: is the measurement any good? We'll do this in terms of two related ideas: *reliability* and *validity*. Put simply， the **reliability** of a measure tells you how precisely you are measuring something， whereas the validity of a measure tells you how accurate the measure is. In this section I'll talk about reliability; we'll talk about validity in in the section on [Assessing the validity of a study].
 
@@ -404,7 +406,7 @@ Not all measurements need to possess all forms of reliability. For instance， e
 
 - **複本信度**。關乎以理論的等效性所設定的測量一致性。如果我拿另一具體重計來測量我的體重，我會得到相同的讀數嗎?
 
-- **內部一致性信度**。如果一套測量是由許多測量功能類似的尺度組成(例如，由圍繞相同主題的幾個問題加總，所得到的人格問卷結果)，每個部分的測量問題能測得相近的數值。我們將在 @sec-Internal-consistency-reliability-analysis 詳細地學習這種評估信度的方法。  
+- **內部一致性信度**。如果一套測量是由許多測量功能類似的量尺組成(例如，由圍繞相同主題的幾個問題加總，所得到的人格問卷結果)，每個部分的測量問題能測得相近的數值。我們將在 @sec-Internal-consistency-reliability-analysis 詳細地學習這種評估信度的方法。  
 
 並非所有測量工具都要用到以上所有評估方法，才能確認信度。例如，學習評量可以被視為一種測量形式。原作者教授的一門課程「計算認知科學」的評量項目包含一項研究專案和一次考試(包括其他)。考試要評量的知識與研究專案所評量的學習成果並不相同，因此整體評量的內部一致性偏低。然而，考試卷裡有幾道題目，設計的目的都是測量大約相同的知識，這些問題往往會導致相似的評量結果。因此就考試這個部分的評量結果，內部一致性較高，也是很自然的。也就是說，在想要測量相同事物的情況下，我們才要有起碼的信度!
 
@@ -448,7 +450,7 @@ When we are doing an analysis we have different names for $X$ and $Y$， since t
 		<td>結果變項</td>
 	</tr>
 	<tr>
-		<td>“進行解釋的”</td>
+		<td>“推進解釋的”</td>
 		<td>獨變項(IV)</td>
 		<td>預測變項</td>
 	</tr>
