add slides 7; update prelude iv to unit 8, unit 11

--- a/07-Introduction-to-probability.qmd
+++ b/07-Introduction-to-probability.qmd
@@ -5,6 +5,9 @@
 source("header.R")
 ```
 
+> [導讀簡報](slides7.html){target="_blank"}
+
+
 <!---
 
 > *[God] has afforded us only the twilight ... of Probability.*\
@@ -302,7 +305,7 @@ A visual depiction of the 'trousers' probability distribution. There are five 'e
 Some rules that probabilities satisfy
 --->
 
-每個基本事件都有一個介於 0 和 1 之間的機率值,只要加總所有事件的機率,會發現總和為 1。太棒了！我們還可以畫出一張漂亮的長條圖將這套機率分佈視覺化(複習一下 @sec-Bar-graphs),成果就像 @fig-fig7-2 。到這裡的學習如果沒有意外，代表讀者已經熟悉之後的單元討論機率分佈的方式了，我(原作者)也能用一張圖解釋為何我總是穿牛仔褲出門了! 還需要強調的事情是,機率論容許**非基本事件**以及基本事件並存。舉個例子來說明，同樣也是用原作者會穿那條褲子出門的機率分佈，要如何用樣本空間裡的基本事件，描述穿任何一條牛仔褲出門的機率？也就是今天出門穿的是“藍色牛仔褲”、“黑色牛仔褲”或“灰色牛仔褲”，都是符合這個狀況的事件。以數學的詞彙來說，我們可以將事件 $E$ 定義為對應符合條件的基本事件集合 $(X1,X2,X3)$。只要其中任何一個基本事件發生,就是代表事件 $E$ 發生。$E$ 的定義確立後, $P(E)$ 的機率是多少很容易了，就是全部加起來：因為藍色、灰色和黑色牛仔褲的機率分別是 $.5$、$.3$ 和 $.1$ ，所以我穿牛仔褲出門的機率等於 $.9$。用數學式子表達的話，就是 $$P(E)=P(X_1)+P(X_2)+P(X_3)$$ 
+每個基本事件都有一個介於 0 和 1 之間的機率值,只要加總所有事件的機率,會發現總和為 1。太棒了！我們還可以畫出一張漂亮的長條圖將這套機率分佈視覺化(複習一下 @sec-Bar-graphs),成果就像 @fig-fig7-2 。到這裡的學習如果沒有意外，代表讀者已經熟悉之後的單元討論機率分佈的方式了，我(原作者)也能用一張圖解釋為何我總是穿牛仔褲出門了! 還需要強調的事情是,機率論容許**非基本事件**以及基本事件並存。舉個例子來說明，同樣也是用原作者會穿那條褲子出門的機率分佈，要如何用樣本空間裡的基本事件，描述穿任何一條牛仔褲出門的機率？也就是今天出門穿的是“藍色牛仔褲”、“黑色牛仔褲”或“灰色牛仔褲”，都是符合這個狀況的事件。以數學的詞彙來說，我們可以將事件 $E$ 定義為對應符合條件的基本事件集合 $(X_1,X_2,X_3)$。只要其中任何一個基本事件發生,就是代表事件 $E$ 發生。$E$ 的定義確立後, $P(E)$ 的機率是多少很容易了，就是全部加起來：因為藍色、灰色和黑色牛仔褲的機率分別是 $.5$、$.3$ 和 $.1$ ，所以我穿牛仔褲出門的機率等於 $.9$。用數學式子表達的話，就是 $$P(E)=P(X_1)+P(X_2)+P(X_3)$$ 
 
 也許您會認為,這些都太好懂，計算也沒什麼困難,這樣的感覺很多學生都會有。 現在討論的內容只是將日常生活的直觀用一些基本數學算則包裝而已。 不過，從簡單的案例開始,我們能構建一些非常強大的數學工具。 雖然這本書不會討論更深的細節, @tbl-tab7-3 列出滿足總機率律的樣本空間，可用的其他運算規則。 這些規則可以從前面描述的基本條件推導,由於本書不會用到這些規則,所以不會展示如何推導。
 
